--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "description": "My implementations of data structures in javascript",
   "main": "jest.config.js",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
+    "husky": "^6.0.0",
     "jest": "^27.0.1",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0",
     "ts-jest": "^27.0.1",
     "typescript": "^4.3.2"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts}": "lint:fix"
+  },
   "scripts": {
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest --coverage"
   },
   "repository": {
