--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm run test"
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
-    "src/**/*.{ts}": "npm run --silent lint:fix"
+    "*.ts": "lint:fix"
   },
   "scripts": {
     "lint": "eslint . --ext .ts",
