--- a/package.json
+++ b/package.json
@@ -10,24 +10,15 @@
     "eslint": "^7.27.0",
     "husky": "^6.0.0",
     "jest": "^27.0.1",
-    "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
     "ts-jest": "^27.0.1",
     "typescript": "^4.3.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm run test"
-    }
-  },
-  "lint-staged": {
-    "*.ts": ["lint:fix"]
-  },
   "scripts": {
     "lint": "eslint . --ext .ts",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
